tests/ui/union.stderr
error: union as errors are not supported
 --> tests/ui/union.rs:4:1
  |
4 | / pub union U {
5 | |     msg: &'static str,
6 | |     num: usize,
7 | | }
  | |_^

error[E0277]: `U` doesn't implement `Debug`
 --> tests/ui/union.rs:3:10
  |
3 | #[derive(Error)]
  |          ^^^^^ `U` cannot be formatted using `{:?}`
  |
  = help: the trait `Debug` is not implemented for `U`
  = note: add `#[derive(Debug)]` to `U` or manually `impl Debug for U`
  = help: see issue #48214
  = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
  = note: this error originates in the derive macro `Error` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `U` with `#[derive(Debug)]`
  |
4 + #[derive(Debug)]
5 | pub union U {
  |
